--- a/src/html/header.html
+++ b/src/html/header.html
@@ -3,7 +3,9 @@
     <div class="header__logo"><a href="#"> Logo</a></div>
     <div class="header__menu menu">
       <div class="menu__burger">
-        <span></span>
+        <div class="menu__burger-icon">
+          <span></span>
+        </div>
         <div class="menu__heading">Menu</div>
       </div>
       <nav class="menu__body">
