--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,14 +1,15 @@
 <header class="header">
   <div class="header__container">
+    <!--<div class="header__zero"></div>-->
     <div class="header__logo"><a href="#"> Logo</a></div>
     <div class="header__menu menu">
-      <div class="menu__burger">
-        <div class="menu__burger-icon">
-          <span></span>
-        </div>
-        <div class="menu__heading">Menu</div>
-      </div>
       <nav class="menu__body">
+        <div class="menu__burger">
+          <div class="menu__burger-icon">
+            <span></span>
+          </div>
+          <div class="menu__heading">Menu</div>
+        </div>
         <ul class="menu__list">
           <li class="menu__item">
             <a href="#" class="menu__link">Projects</a>
