--- a/src/index.html
+++ b/src/index.html
@@ -54,9 +54,12 @@
               <div class="swiper-button-next"></div>
             </div>
             <h1 class="first-section__slogan">Thoughtful making of space</h1>
+            <!-- Discaver more -->
             @@include('html/elements/discover-more.html',{"class":
             "first-section__discover-more", "text": "Discover more", "href":
-            "#"}) @@include('html/elements/data-box.html',{"class":
+            "#"})
+            <!-- data-box -->
+            @@include('html/elements/data-box.html',{"class":
             "first-section__data-box"})
             <div class="first-section__column">
               <div class="first-section__next">
@@ -65,6 +68,25 @@
               <div class="first-section__vertical-slogan">
                 Perfect proportions
               </div>
+            </div>
+          </div>
+        </div>
+        <div class="toolbar">
+          <div class="toolbar__conteiner">
+            <div class="toolbar__icon-box">
+              <div class="toolbar__icon icon-left-arrowhead-blue"></div>
+            </div>
+            <div class="toolbar__icon-box">
+              <div class="toolbar__icon icon-right-arrowhead-grey"></div>
+            </div>
+            <div class="toolbar__icon-box">
+              <div class="toolbar__icon icon-Exit"></div>
+            </div>
+            <div class="toolbar__icon-box">
+              <div class="toolbar__icon icon-book"></div>
+            </div>
+            <div class="toolbar__icon-box">
+              <div class="toolbar__icon icon-send-request"></div>
             </div>
           </div>
         </div>
