--- a/src/html/header.html
+++ b/src/html/header.html
@@ -12,23 +12,28 @@
           </div>
           <div class="menu__heading">Menu</div>
         </div>
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a href="#" class="menu__link">Home</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Projects</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">About us</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Blog</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Contacts</a>
-          </li>
-        </ul>
+        <div class="menu__box-list">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Home</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Projects</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">About us</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Blog</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Contacts</a>
+            </li>
+            <li class="menu__item_button button">
+              <div class="button__text">Send Request</div>
+            </li>
+          </ul>
+        </div>
       </nav>
       <div class="menu__last-block">
         <div class="menu__language">En</div>
