--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
               <div class="toolbar__icon icon-right-arrowhead-grey"></div>
             </div>
             <div class="toolbar__icon-box">
-              <div class="toolbar__icon icon-Exit"></div>
+              <div class="toolbar__icon icon-exit"></div>
             </div>
             <div class="toolbar__icon-box">
               <div class="toolbar__icon icon-book"></div>
@@ -147,6 +147,125 @@
                   Ceo company
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+        <div class="third-section">
+          <div class="third-section__conteiner">
+            <div class="third-section__first-box">
+              <h2 class="third-section__title"></h2>
+              <div class="third-section__subtitle"></div>
+            </div>
+            <div class="third-section__midl-box">
+              <div class="third-section__image-box">
+                <div class="third-section__image">
+                  <img src="" alt="" />
+                </div>
+                <div class="third-section__about-image">
+                  <div class="third-section__data">
+                    <div class="third-section__location"></div>
+                    <div class="third-section__date"></div>
+                    <div class="third-section__area"></div>
+                  </div>
+                  <div class="third-section__name">
+                    <h3></h3>
+                    @@include('html/elements/discover-more.html',{"class":
+                    "third-section__discover-more", "text": "Discover more",
+                    "href": "#"})
+                  </div>
+                </div>
+              </div>
+              <div class="third-section__image-box">
+                <div class="third-section__image">
+                  <img src="" alt="" />
+                </div>
+                <div class="third-section__about-image">
+                  <div class="third-section__data">
+                    <div class="third-section__location"></div>
+                    <div class="third-section__date"></div>
+                    <div class="third-section__area"></div>
+                  </div>
+                  <div class="third-section__name">
+                    <h3></h3>
+                    @@include('html/elements/discover-more.html',{"class":
+                    "third-section__discover-more", "text": "Discover more",
+                    "href": "#"})
+                  </div>
+                </div>
+              </div>
+              <div class="third-section__image-box">
+                <div class="third-section__image">
+                  <img src="" alt="" />
+                </div>
+                <div class="third-section__about-image">
+                  <div class="third-section__data">
+                    <div class="third-section__location"></div>
+                    <div class="third-section__date"></div>
+                    <div class="third-section__area"></div>
+                  </div>
+                  <div class="third-section__name">
+                    <h3></h3>
+                    @@include('html/elements/discover-more.html',{"class":
+                    "third-section__discover-more", "text": "Discover more",
+                    "href": "#"})
+                  </div>
+                </div>
+              </div>
+              <div class="third-section__image-box">
+                <div class="third-section__image">
+                  <img src="" alt="" />
+                </div>
+                <div class="third-section__about-image">
+                  <div class="third-section__data">
+                    <div class="third-section__location"></div>
+                    <div class="third-section__date"></div>
+                    <div class="third-section__area"></div>
+                  </div>
+                  <div class="third-section__name">
+                    <h3></h3>
+                    @@include('html/elements/discover-more.html',{"class":
+                    "third-section__discover-more", "text": "Discover more",
+                    "href": "#"})
+                  </div>
+                </div>
+              </div>
+              <div class="third-section__image-box">
+                <div class="third-section__image">
+                  <img src="" alt="" />
+                </div>
+                <div class="third-section__about-image">
+                  <div class="third-section__data">
+                    <div class="third-section__location"></div>
+                    <div class="third-section__date"></div>
+                    <div class="third-section__area"></div>
+                  </div>
+                  <div class="third-section__name">
+                    <h3></h3>
+                    @@include('html/elements/discover-more.html',{"class":
+                    "third-section__discover-more", "text": "Discover more",
+                    "href": "#"})
+                  </div>
+                </div>
+              </div>
+              <div class="third-section__see-more">
+                <h3></h3>
+                <div class="third-section__example-image">
+                  <img src="" alt="" />
+                </div>
+              </div>
+            </div>
+            <div class="third-section__last-box">
+              <div class="third-section__vertical-heading">
+                <div class="third-section__vertical-heading-box">About</div>
+              </div>
+              <div class="third-section__exerpt"></div>
+              <div class="third-section__content">
+                <p></p>
+                <div class="menu__button button">
+                  <div class="button__text">Make request</div>
+                </div>
+              </div>
+              <div class="third-section__example-project"></div>
             </div>
           </div>
         </div>
