--- a/src/index.html
+++ b/src/index.html
@@ -153,22 +153,30 @@
         <div class="third-section">
           <div class="third-section__conteiner">
             <div class="third-section__first-box">
-              <h2 class="third-section__title"></h2>
-              <div class="third-section__subtitle"></div>
+              <div class="third-section__vertical-about-box">
+                <div class="third-section__vertical-about-text">About</div>
+              </div>
+              <h2 class="third-section__title">Our Projects</h2>
+              <p class="third-section__subtitle p1">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+                ullamcorper eu mauris vitae posuere. Ut at luctus ligula. Nunc
+                ante felis, aliquam eu enim sed, ornare pretium velit.
+              </p>
+              <div class="third-section__blorred-text">We have</div>
             </div>
             <div class="third-section__midl-box">
               <div class="third-section__image-box">
                 <div class="third-section__image">
-                  <img src="" alt="" />
+                  <img src="@img/third-section/1.png" alt="" />
                 </div>
                 <div class="third-section__about-image">
                   <div class="third-section__data">
-                    <div class="third-section__location"></div>
-                    <div class="third-section__date"></div>
-                    <div class="third-section__area"></div>
+                    <div class="third-section__location">Lodz</div>
+                    <div class="third-section__date">16.10.2018</div>
+                    <div class="third-section__area">80 sq.m</div>
                   </div>
                   <div class="third-section__name">
-                    <h3></h3>
+                    <h3>Eyewear store interior</h3>
                     @@include('html/elements/discover-more.html',{"class":
                     "third-section__discover-more", "text": "Discover more",
                     "href": "#"})
@@ -177,16 +185,16 @@
               </div>
               <div class="third-section__image-box">
                 <div class="third-section__image">
-                  <img src="" alt="" />
+                  <img src="@img/third-section/2.png" alt="" />
                 </div>
                 <div class="third-section__about-image">
                   <div class="third-section__data">
-                    <div class="third-section__location"></div>
-                    <div class="third-section__date"></div>
-                    <div class="third-section__area"></div>
+                    <div class="third-section__location">Lodz</div>
+                    <div class="third-section__date">16.10.2018</div>
+                    <div class="third-section__area">80 sq.m</div>
                   </div>
                   <div class="third-section__name">
-                    <h3></h3>
+                    <h3>Minimalist style home</h3>
                     @@include('html/elements/discover-more.html',{"class":
                     "third-section__discover-more", "text": "Discover more",
                     "href": "#"})
@@ -195,16 +203,16 @@
               </div>
               <div class="third-section__image-box">
                 <div class="third-section__image">
-                  <img src="" alt="" />
+                  <img src="@img/third-section/3.png" alt="" />
                 </div>
                 <div class="third-section__about-image">
                   <div class="third-section__data">
-                    <div class="third-section__location"></div>
-                    <div class="third-section__date"></div>
-                    <div class="third-section__area"></div>
+                    <div class="third-section__location">Lodz</div>
+                    <div class="third-section__date">16.10.2018</div>
+                    <div class="third-section__area">80 sq.m</div>
                   </div>
                   <div class="third-section__name">
-                    <h3></h3>
+                    <h3>Residence by the lighthouse</h3>
                     @@include('html/elements/discover-more.html',{"class":
                     "third-section__discover-more", "text": "Discover more",
                     "href": "#"})
@@ -213,16 +221,16 @@
               </div>
               <div class="third-section__image-box">
                 <div class="third-section__image">
-                  <img src="" alt="" />
+                  <img src="@img/third-section/4.png" alt="" />
                 </div>
                 <div class="third-section__about-image">
                   <div class="third-section__data">
-                    <div class="third-section__location"></div>
-                    <div class="third-section__date"></div>
-                    <div class="third-section__area"></div>
+                    <div class="third-section__location">Lodz</div>
+                    <div class="third-section__date">16.10.2018</div>
+                    <div class="third-section__area">80 sq.m</div>
                   </div>
                   <div class="third-section__name">
-                    <h3></h3>
+                    <h3>Eyewear storeinterior</h3>
                     @@include('html/elements/discover-more.html',{"class":
                     "third-section__discover-more", "text": "Discover more",
                     "href": "#"})
@@ -231,41 +239,61 @@
               </div>
               <div class="third-section__image-box">
                 <div class="third-section__image">
-                  <img src="" alt="" />
+                  <img src="@img/third-section/5.png" alt="" />
                 </div>
                 <div class="third-section__about-image">
                   <div class="third-section__data">
-                    <div class="third-section__location"></div>
-                    <div class="third-section__date"></div>
-                    <div class="third-section__area"></div>
+                    <div class="third-section__location">Lodz</div>
+                    <div class="third-section__date">16.10.2018</div>
+                    <div class="third-section__area">80 sq.m</div>
                   </div>
                   <div class="third-section__name">
-                    <h3></h3>
+                    <h3>House on a Hillside</h3>
                     @@include('html/elements/discover-more.html',{"class":
                     "third-section__discover-more", "text": "Discover more",
                     "href": "#"})
                   </div>
                 </div>
               </div>
-              <div class="third-section__see-more">
-                <h3></h3>
-                <div class="third-section__example-image">
-                  <img src="" alt="" />
+              <a href="#" class="third-section__image-box-last">
+                <h3>See more 60 projects</h3>
+                <div class="third-section__image">
+                  <img src="@img/third-section/last.png" alt="" />
                 </div>
-              </div>
+              </a>
             </div>
             <div class="third-section__last-box">
-              <div class="third-section__vertical-heading">
-                <div class="third-section__vertical-heading-box">About</div>
+              <div class="third-section__vertical-request-box">
+                <div class="third-section__vertical-request-text">
+                  Make request
+                </div>
               </div>
-              <div class="third-section__exerpt"></div>
+              <div class="third-section__excerpt">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </div>
               <div class="third-section__content">
-                <p></p>
-                <div class="menu__button button">
+                <p1>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Aliquam ullamcorper eu mauris vitae posuere. Ut at luctus
+                  ligula. Nunc ante felis, aliquam eu enim sed, ornare pretium
+                  velit.
+                </p1>
+                <div class="third-section__button button">
                   <div class="button__text">Make request</div>
                 </div>
               </div>
-              <div class="third-section__example-project"></div>
+              <div class="third-section__example-project">
+                <!--<img src="@img/third-section/21.png" alt="" />
+                <img src="@img/third-section/2.png" alt="" />
+                <img src="@img/third-section/3.png" alt="" />
+                <img src="@img/third-section/4.png" alt="" />
+                <img src="@img/third-section/25.png.png" alt="" />
+                <img src="@img/third-section/21.png" alt="" />
+                <img src="@img/third-section/2.png" alt="" />
+                <img src="@img/third-section/3.png" alt="" />
+                <img src="@img/third-section/4.png" alt="" />
+                <img src="@img/third-section/25.png.png" alt="" />-->
+              </div>
             </div>
           </div>
         </div>
