--- a/src/index.html
+++ b/src/index.html
@@ -71,25 +71,6 @@
             </div>
           </div>
         </div>
-        <div class="toolbar">
-          <div class="toolbar__conteiner">
-            <div class="toolbar__icon-box">
-              <div class="toolbar__icon icon-left-arrowhead-blue"></div>
-            </div>
-            <div class="toolbar__icon-box">
-              <div class="toolbar__icon icon-right-arrowhead-grey"></div>
-            </div>
-            <div class="toolbar__icon-box">
-              <div class="toolbar__icon icon-exit"></div>
-            </div>
-            <div class="toolbar__icon-box">
-              <div class="toolbar__icon icon-book"></div>
-            </div>
-            <div class="toolbar__icon-box">
-              <div class="toolbar__icon icon-send-request"></div>
-            </div>
-          </div>
-        </div>
         <div class="second-section">
           <div class="second-section__vertical-heading">
             <div class="second-section__vertical-heading-box">About</div>
@@ -263,36 +244,58 @@
               </a>
             </div>
             <div class="third-section__last-box">
-              <div class="third-section__vertical-request-box">
-                <div class="third-section__vertical-request-text">
-                  Make request
+              <div class="third-section__last-box-conteiner">
+                <div class="third-section__vertical-request-box">
+                  <div class="third-section__vertical-request-text">
+                    Make request
+                  </div>
                 </div>
-              </div>
-              <div class="third-section__excerpt">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              </div>
-              <div class="third-section__content">
-                <p1>
+                <div class="third-section__excerpt">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Aliquam ullamcorper eu mauris vitae posuere. Ut at luctus
-                  ligula. Nunc ante felis, aliquam eu enim sed, ornare pretium
-                  velit.
-                </p1>
-                <div class="third-section__button button">
-                  <div class="button__text">Make request</div>
+                </div>
+                <div class="third-section__content">
+                  <p class="p1">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Aliquam ullamcorper eu mauris vitae posuere. Ut at luctus
+                    ligula. Nunc ante felis, aliquam eu enim sed, ornare pretium
+                    velit.
+                  </p>
+                  <div class="third-section__button button">
+                    <div class="button__text">Make request</div>
+                  </div>
                 </div>
               </div>
               <div class="third-section__example-project">
-                <!--<img src="@img/third-section/21.png" alt="" />
-                <img src="@img/third-section/2.png" alt="" />
-                <img src="@img/third-section/3.png" alt="" />
-                <img src="@img/third-section/4.png" alt="" />
-                <img src="@img/third-section/25.png.png" alt="" />
-                <img src="@img/third-section/21.png" alt="" />
-                <img src="@img/third-section/2.png" alt="" />
-                <img src="@img/third-section/3.png" alt="" />
-                <img src="@img/third-section/4.png" alt="" />
-                <img src="@img/third-section/25.png.png" alt="" />-->
+                <a href="#">
+                  <img src="@img/third-section/21.png" alt="" />
+                </a>
+                <a href="#">
+                  <img src="@img/third-section/2.png" alt="" />
+                </a>
+                <a href="#">
+                  <img src="@img/third-section/3.png" alt="" />
+                </a>
+                <a href="#">
+                  <img src="@img/third-section/4.png" alt="" />
+                </a>
+                <a href="#">
+                  <img src="@img/third-section/25.png" alt="" />
+                </a>
+                <a href="#">
+                  <img src="@img/third-section/21.png" alt="" />
+                </a>
+                <a href="#">
+                  <img src="@img/third-section/2.png" alt="" />
+                </a>
+                <a href="#">
+                  <img src="@img/third-section/3.png" alt="" />
+                </a>
+                <a href="#">
+                  <img src="@img/third-section/4.png" alt="" />
+                </a>
+                <a href="#">
+                  <img src="@img/third-section/25.png" alt="" />
+                </a>
               </div>
             </div>
           </div>
