--- a/src/html/elements/example-box.html
+++ b/src/html/elements/example-box.html
@@ -12,9 +12,9 @@
         ullamcorper eu mauris vitae posuere. Ut at luctus ligula. Nunc ante
         felis, aliquam eu enim sed, ornare pretium velit.
       </p>
-      <div class="example-box__button button">
+      <a href="#popup" class="example-box__button button popup-link">
         <div class="button__text">Make request</div>
-      </div>
+      </a>
     </div>
   </div>
   <div class="example-box__example-project">
