--- a/src/html/header.html
+++ b/src/html/header.html
@@ -29,17 +29,17 @@
             <li class="menu__item">
               <a href="#" class="menu__link">Contacts</a>
             </li>
-            <li class="menu__item_button button">
+            <a href="#popup" class="menu__item_button button">
               <div class="button__text">Send Request</div>
-            </li>
+            </a>
           </ul>
         </div>
       </nav>
       <div class="menu__last-block">
         <div class="menu__language">En</div>
-        <div class="menu__button button">
+        <a href="#popup" class="menu__button button popup-link">
           <div class="button__text">Send Request</div>
-        </div>
+        </a>
       </div>
     </div>
   </div>
