--- a/src/index.html
+++ b/src/index.html
@@ -250,7 +250,7 @@
       </main>
       @@include('html/footer.html',{})
     </div>
-    @@include('html/elements/poop-up.html',{})
+    @@include('html/elements/pop-up.html',{})
     <script src="js/app.min.js"></script>
   </body>
 </html>
