--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header lock-padding">
   <div class="header__container">
     <div class="header__zero">
       @@include('elements/data-box.html',{"class": "header__data-box"})
