--- a/src/html/header.html
+++ b/src/html/header.html
@@ -29,7 +29,7 @@
             <li class="menu__item">
               <a href="#" class="menu__link">Contacts</a>
             </li>
-            <a href="#popup" class="menu__item_button button">
+            <a href="#popup" class="menu__item_button button popup-link">
               <div class="button__text">Send Request</div>
             </a>
           </ul>
