--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   @@include('html/head.html',{ "title":"Studio of interiors" })
 
   <body>
+    @@include('html/elements/preloader.html',{})
     <div class="wrapper">
       @@include('html/header.html',{})
       <main>
