--- a/src/html/elements/email-section.html
+++ b/src/html/elements/email-section.html
@@ -8,5 +8,61 @@
       ullamcorper eu mauris vitae posuere.
     </div>
   </div>
-  <div class="email-section__foto-block"></div>
+  <a href="#" id="email-section-foto1">
+    <img
+      class="email-section__foto"
+      src="@img/email-section/Rectangle 2.29 (1).jpg"
+      alt=""
+    />
+  </a>
+  <a href="#" id="email-section-foto2">
+    <img
+      class="email-section__foto"
+      src="@img/email-section/Rectangle 2.29.jpg"
+      alt=""
+    />
+  </a>
+  <a href="#" id="email-section-foto3">
+    <img
+      class="email-section__foto"
+      src="@img/email-section/Rectangle 2.3 (1).jpg"
+      alt=""
+    />
+  </a>
+  <a href="#" id="email-section-foto6">
+    <img
+      class="email-section__foto"
+      src="@img/email-section/Rectangle 2.3.jpg"
+      alt=""
+    />
+  </a>
+  <a href="#" id="email-section-foto4">
+    <img
+      class="email-section__foto"
+      src="@img/email-section/Rectangle 2.3 (2).jpg"
+      alt=""
+    />
+  </a>
+  <a href="#" id="email-section-foto5">
+    <img
+      class="email-section__foto"
+      src="@img/email-section/Rectangle 2.3 (3).jpg"
+      alt=""
+    />
+  </a>
+  <a href="#" id="email-section-foto8">
+    <img
+      class="email-section__foto"
+      src="@img/email-section/Rectangle 2.7.jpg"
+      alt=""
+    />
+  </a>
+  <a href="#" id="email-section-foto7">
+    <img
+      class="email-section__foto"
+      src="@img/email-section/Rectangle 2.4.jpg"
+      alt=""
+    />
+  </a>
+  <div class="email-section__foto"></div>
 </div>
