--- a/src/html/elements/preloader.html
+++ b/src/html/elements/preloader.html
@@ -1,3 +1,6 @@
 <div class="preloader">
-  <div class="preloader__content"></div>
+  <div class="preloader__content">
+    <div class="preloader__standing-element">HI</div>
+    <div class="preloader__variable-element" id="variable-element">hi</div>
+  </div>
 </div>
