--- a/src/index.html
+++ b/src/index.html
@@ -248,6 +248,7 @@
             "third-section__last-box"})
           </div>
         </div>
+        @@include('html/elements/email-section.html')
         @@include('html/elements/contact.html',{"class": "last-section"})
       </main>
       @@include('html/footer.html',{})
